@startuml

package fxui <<Frame>> {
    class App
    class AppController
    class PostController
    class BrowserController
    class LoginController
}

package core.io <<Frame>> {
    interface IO
    class LocalIO
}

package core.json <<Frame>> {
    class MememeModule
    class PostSerializer
    class PostDeserializer
    class UserSerializer
    class UserDeserializer
    class UserListSerializer
}

package core.datastructures <<Frame>> {
    class User
    class Post
    class Database
}

class App {
    + start(Stage) void
}

App --> AppController

class AppController {
}

BrowserController --> PostController

class PostController {
}

AppController --> BrowserController

class BrowserController {
}

AppController --> LoginController

class LoginController {
}

interface IO {
    + getPostList(): List<Post>
    + savePost(Post): void
    + saveImage(File): void
}

class LocalIO implements IO
LocalIO --> MememeModule

class MememeModule{
    + serializeUser(User): String
    + deserializeUser(String): User
    + serializePost(Post): String
    + deserializePost(String): Post
}

MememeModule --> PostSerializer
MememeModule --> PostDeserializer
MememeModule --> UserSerializer
MememeModule --> UserDeserializer
MememeModule --> UserListSerializer

AppController "activeUser"--> User
AppController "database"--> Database
PostController --> Post

class User {
    - id: int
    - name: String
    - nickname: String
    - email: String
    + addPost(Post): Void
}

class Post {
    - caption: String
    - image: String
}

class Database {
}

User "1" <--> "*" Post : Owner
Database "storage" --> IO
Database --> "*" User

@enduml
